--- a/custom/estate/views/estate_property_views.xml
+++ b/custom/estate/views/estate_property_views.xml
@@ -4,5 +4,92 @@
             <field name="name">Properties</field>
             <field name="res_model">estate.property</field>
             <field name="view_mode">tree,form</field>
+
         </record>
+       <record id="estate_property_window_action" model="ir.ui.view">
+        <field name="name">Estate_property_tree</field>
+        <field name="model">estate.property</field>
+        <field name="arch" type="xml">
+
+            <tree string="Channel" >
+
+                 <field name="name"/>
+                 <field name="postcode"/>
+                 <field name="bedrooms"/>
+                 <field name="living_area"/>
+                 <field name="expected_price"/>
+                 <field name="selling_price"/>
+                 <field name="date_availability"/>
+            </tree>
+        </field>
+
+    </record>
+    <record id="estate_property_window_form" model="ir.ui.view">
+        <field name="name">Estate_property_form</field>
+        <field name="model">estate.property</field>
+        <field name="arch" type="xml">
+            <form string="Property">
+                <sheet>
+                        <h1 style="font-size:add_size" >
+                            <field name ="name">
+                            </field>
+                    </h1>
+
+                    <group>
+
+                        <group>
+                            <field name="postcode"/>
+                            <field name="date_availability"/>
+                        </group>
+                        <group>
+                            <field name="expected_price"/>
+                            <field name="selling_price"/>
+                        </group>
+                            <notebook>
+                                <page string="Description">
+                                    <group>
+                                        <field name ="description"/>
+                                        <field name ="bedrooms"/>
+                                        <field name ="living_area"/>
+                                        <field name ="facades"/>
+                                        <field name ="garage"/>
+                                        <field name ="garden"/>
+                                        <field name ="garden_area"/>
+                                        <field name ="garden_orientation"/>
+                                    </group>
+                                </page>
+                            </notebook>
+                    </group>
+
+                </sheet>
+            </form>
+        </field>
+    </record>
+    <record id="estate_property_window_search_view" model="ir.ui.view">
+            <field name="name">estate_property_search</field>
+            <field name="model">estate.property</field>
+            <field name="arch" type="xml">
+                <search string="Search">
+                    <field name="name" string="Title" />
+                    <field name="postcode"/>
+                    <field name="expected_price"/>
+                    <field name="bedrooms"/>
+                    <field name="living_area"/>
+                    <field name="facades"/>
+                      <separator/>
+                     <filter string="Active" name="active" domain="[('active', '=', True)]"/>
+                     <group expand="1" string="Group By">
+                        <filter string="Postcode" name="postcode" context="{'group_by':'postcode', 'residual_visible':True}"/>
+                     </group>
+
+                </search>
+            </field>
+        </record>
+    <record id="estate_property_type_window" model="ir.actions.act_window">
+            <field name="name">Property Types</field>
+            <field name="res_model">estate.property.type</field>
+            <field name="view_mode">tree,form</field>
+    </record>
+
+
     </odoo>
