--- a/custom/estate/views/estate_menus.xml
+++ b/custom/estate/views/estate_menus.xml
@@ -1,14 +1,15 @@
 <?xml version = "1.0"?>
-    <odoo>
+<odoo>
+
+    <menuitem id="test_menu_root" name="Real Estate">
+        <menuitem id="advertisment_first_level_menu" name="Advertisments">
+            <menuitem id="advertisment_model_menu_action" action="estate_property_window"/>
+        </menuitem>
+        <menuitem id="house_type_first_level_menu" name="Settings">
+            <menuitem id="house_types_model_menu_action" action="estate_property_type_window"/>
+            <menuitem id="house_tags_model_menu_action" action="estate_property_tags_window"/>
+        </menuitem>
+    </menuitem>
 
 
-
-
-        <menuitem id="test_menu_root" name="Real Estate">
-            <menuitem id="test_first_level_menu" name="Advertisments" >
-                    <menuitem id="test_model_menu_action" action="estate_property_window"/>
-                  </menuitem>
-
-            </menuitem>
-
-    </odoo>
+</odoo>
