--- a/custom/estate/views/estate_property_views.xml
+++ b/custom/estate/views/estate_property_views.xml
@@ -1,25 +1,28 @@
 <?xml version = "1.0"?>
-    <odoo>
-        <record id="estate_property_window" model="ir.actions.act_window">
-            <field name="name">Properties</field>
-            <field name="res_model">estate.property</field>
-            <field name="view_mode">tree,form</field>
+<odoo>
+    <record id="estate_property_window" model="ir.actions.act_window">
+        <field name="name">Properties</field>
+        <field name="res_model">estate.property</field>
+        <field name="view_mode">tree,form</field>
 
-        </record>
-       <record id="estate_property_window_action" model="ir.ui.view">
+    </record>
+    <record id="estate_property_window_action" model="ir.ui.view">
         <field name="name">Estate_property_tree</field>
         <field name="model">estate.property</field>
         <field name="arch" type="xml">
 
-            <tree string="Channel" >
+            <tree string="Channel">
 
-                 <field name="name"/>
-                 <field name="postcode"/>
-                 <field name="bedrooms"/>
-                 <field name="living_area"/>
-                 <field name="expected_price"/>
-                 <field name="selling_price"/>
-                 <field name="date_availability"/>
+
+                <field name="name"/>
+                <field name="tag_ids" widget="many2many_tags"/>
+                <field name="postcode"/>
+                <field name="bedrooms"/>
+                <field name="living_area"/>
+                <field name="expected_price"/>
+                <field name="selling_price"/>
+                <field name="date_availability"/>
+                <field name="property_type_id"/>
             </tree>
         </field>
 
@@ -30,11 +33,12 @@
         <field name="arch" type="xml">
             <form string="Property">
                 <sheet>
-                        <h1 style="font-size:add_size" >
-                            <field name ="name">
-                            </field>
-                    </h1>
+                    <h1 style="font-size:add_size">
+                        <field name="name">
+                        </field>
 
+                    </h1>
+                    <field name="tag_ids" widget="many2many_tags"/>
                     <group>
 
                         <group>
@@ -45,20 +49,41 @@
                             <field name="expected_price"/>
                             <field name="selling_price"/>
                         </group>
-                            <notebook>
-                                <page string="Description">
-                                    <group>
-                                        <field name ="description"/>
-                                        <field name ="bedrooms"/>
-                                        <field name ="living_area"/>
-                                        <field name ="facades"/>
-                                        <field name ="garage"/>
-                                        <field name ="garden"/>
-                                        <field name ="garden_area"/>
-                                        <field name ="garden_orientation"/>
-                                    </group>
-                                </page>
-                            </notebook>
+                        <notebook>
+                            <page string="Description">
+                                <group>
+                                    <field name="description"/>
+                                    <field name="bedrooms"/>
+                                    <field name="living_area"/>
+                                    <field name="facades"/>
+                                    <field name="garage"/>
+                                    <field name="garden"/>
+                                    <field name="garden_area"/>
+                                    <field name="garden_orientation"/>
+                                    <field name="property_type_id"/>
+
+                                </group>
+                            </page>
+                            <page string="Offers">
+
+                                <field name="offer_ids">
+                                    <tree string="Property_offer">
+                                        <field name="price"/>
+                                        <field name="partner_id"/>
+                                        <field name="status"/>
+                                    </tree>
+                                </field>
+
+
+                            </page>
+                            <page string="Other info">
+                                <group>
+                                    <field name="salesperson_id"/>
+                                    <field name="buyer_id"/>
+                                </group>
+
+                            </page>
+                        </notebook>
                     </group>
 
                 </sheet>
@@ -66,30 +91,67 @@
         </field>
     </record>
     <record id="estate_property_window_search_view" model="ir.ui.view">
-            <field name="name">estate_property_search</field>
-            <field name="model">estate.property</field>
-            <field name="arch" type="xml">
-                <search string="Search">
-                    <field name="name" string="Title" />
-                    <field name="postcode"/>
-                    <field name="expected_price"/>
-                    <field name="bedrooms"/>
-                    <field name="living_area"/>
-                    <field name="facades"/>
-                      <separator/>
-                     <filter string="Active" name="active" domain="[('active', '=', True)]"/>
-                     <group expand="1" string="Group By">
-                        <filter string="Postcode" name="postcode" context="{'group_by':'postcode', 'residual_visible':True}"/>
-                     </group>
+        <field name="name">estate_property_search</field>
+        <field name="model">estate.property</field>
+        <field name="arch" type="xml">
+            <search string="Search">
+                <field name="name" string="Title"/>
+                <field name="postcode"/>
+                <field name="expected_price"/>
+                <field name="bedrooms"/>
+                <field name="living_area"/>
+                <field name="facades"/>
+                <field name="property_type_id"/>
+                <separator/>
+                <filter string="Active" name="active" domain="[('active', '=', True)]"/>
+                <group expand="1" string="Group By">
+                    <filter string="Postcode" name="postcode"
+                            context="{'group_by':'postcode', 'residual_visible':True}"/>
+                </group>
 
-                </search>
-            </field>
-        </record>
+            </search>
+        </field>
+    </record>
     <record id="estate_property_type_window" model="ir.actions.act_window">
-            <field name="name">Property Types</field>
-            <field name="res_model">estate.property.type</field>
-            <field name="view_mode">tree,form</field>
+        <field name="name">Property Types</field>
+        <field name="res_model">estate.property.type</field>
+        <field name="view_mode">tree,form</field>
+    </record>
+    <record id="estate_property_type_window_form" model="ir.ui.view">
+        <field name="name">Estate_property_type_form</field>
+        <field name="model">estate.property.type</field>
+        <field name="arch" type="xml">
+            <form string="Property_type">
+                <sheet>
+                    <h1 style="font-size:add_size">
+                        <field name="name">
+                        </field>
+                    </h1>
+                </sheet>
+            </form>
+        </field>
+    </record>
+    <record id="estate_property_tags_window" model="ir.actions.act_window">
+        <field name="name">Property Tags</field>
+        <field name="res_model">estate.property.tags</field>
+        <field name="view_mode">tree,form</field>
     </record>
 
+    <record id="estate_property_offer_window" model="ir.actions.act_window">
+        <field name="name">Offers</field>
+        <field name="res_model">estate.property.offer</field>
+        <field name="view_mode">tree,form</field>
+    </record>
+    <record id="estate_property_offer_window_form" model="ir.ui.view">
+        <field name="name">Estate_property_offer_form</field>
+        <field name="model">estate.property.offer</field>
+        <field name="arch" type="xml">
+            <tree string="Property_offer">
+                <field name="price"/>
+                <field name="partner_id"/>
+                <field name="status"/>
+            </tree>
+        </field>
+    </record>
 
-    </odoo>
+</odoo>
