--- a/custom/estate/views/estate_property_views.xml
+++ b/custom/estate/views/estate_property_views.xml
@@ -1,14 +1,14 @@
 <?xml version = "1.0"?>
 <odoo>
     <data>
-        <record id="estate_property_window" model="ir.actions.act_window">
+        <record id="estate_property_action" model="ir.actions.act_window">
             <field name="name">Properties</field>
             <field name="res_model">estate.property</field>
             <field name="view_mode">tree,form,kanban</field>
 
         </record>
         <record id="estate_property_view_kanban" model="ir.ui.view">
-            <field name="name">Estate_property_tree</field>
+            <field name="name">Estate.property.view.kanban</field>
             <field name="model">estate.property</field>
             <field name="arch" type="xml">
                 <kanban default_group_by="property_type_id" records_draggable="false">
@@ -41,8 +41,8 @@
                 </kanban>
             </field>
         </record>
-        <record id="estate_property_window_action" model="ir.ui.view">
-            <field name="name">Estate_property_tree</field>
+        <record id="estate_property_view" model="ir.ui.view">
+            <field name="name">estate.property.view</field>
             <field name="model">estate.property</field>
             <field name="arch" type="xml">
                 <tree string="Channel">
@@ -58,8 +58,8 @@
                 </tree>
             </field>
         </record>
-        <record id="estate_property_window_form" model="ir.ui.view">
-            <field name="name">Estate_property_form</field>
+        <record id="estate_property_form" model="ir.ui.view">
+            <field name="name">estate.property.form</field>
             <field name="model">estate.property</field>
             <field name="arch" type="xml">
                 <form string="Property">
@@ -80,7 +80,7 @@
                             <group>
 
                                 <field name="property_type_id"
-                                       options="{'no_create': True, 'no_create_edit' : True} "></field>
+                                       options="{'no_create': True, 'no_create_edit' : True} "/>
                                 <field name="postcode"/>
                                 <field name="date_availability"/>
                             </group>
@@ -140,8 +140,8 @@
                 </form>
             </field>
         </record>
-        <record id="estate_property_window_search_view" model="ir.ui.view">
-            <field name="name">estate_property_search</field>
+        <record id="estate_property_view_search" model="ir.ui.view">
+            <field name="name">estate.property.view.search</field>
             <field name="model">estate.property</field>
             <field name="arch" type="xml">
                 <search string="Search">
@@ -162,13 +162,13 @@
                 </search>
             </field>
         </record>
-        <record id="estate_property_type_window" model="ir.actions.act_window">
-            <field name="name">Property Types</field>
+        <record id="estate_property_type_action" model="ir.actions.act_window">
+            <field name="name">Types</field>
             <field name="res_model">estate.property.type</field>
             <field name="view_mode">tree,form</field>
         </record>
-        <record id="estate_property_type_window_form" model="ir.ui.view">
-            <field name="name">Estate_property_type_form</field>
+        <record id="estate_property_type_view_form" model="ir.ui.view">
+            <field name="name">Estate.property.type.view.form</field>
             <field name="model">estate.property.type</field>
             <field name="arch" type="xml">
                 <form string="Property_type">
@@ -190,8 +190,8 @@
                 </form>
             </field>
         </record>
-        <record id="estate_property_type_window_tree_view" model="ir.ui.view">
-            <field name="name">Estate_property_tree_view</field>
+        <record id="estate_property_type_view_tree" model="ir.ui.view">
+            <field name="name">estate.property.type.view.tree</field>
             <field name="model">estate.property.type</field>
             <field name="arch" type="xml">
                 <tree>
@@ -201,19 +201,19 @@
                 </tree>
             </field>
         </record>
-        <record id="estate_property_tags_window" model="ir.actions.act_window">
-            <field name="name">Property Tags</field>
+        <record id="estate_property_tags_action" model="ir.actions.act_window">
+            <field name="name">Advertisments</field>
             <field name="res_model">estate.property.tags</field>
             <field name="view_mode">tree,form</field>
         </record>
 
-        <record id="estate_property_offer_window" model="ir.actions.act_window">
+        <record id="estate_property_offer_action" model="ir.actions.act_window">
             <field name="name">Offers</field>
             <field name="res_model">estate.property.offer</field>
             <field name="view_mode">tree,form</field>
         </record>
-        <record id="estate_property_offer_window_form" model="ir.ui.view">
-            <field name="name">Estate_property_offer_form</field>
+        <record id="estate_property_offer_form" model="ir.ui.view">
+            <field name="name">estate.property.offer.form</field>
             <field name="model">estate.property.offer</field>
             <field name="arch" type="xml">
                 <form string="Property_offer">
